[gd_scene load_steps=4 format=3 uid="uid://gqe842iok3kq"]

[ext_resource type="Script" uid="uid://bscns3473kpw" path="res://autoloads/message_displayer/message_displayer.gd" id="1_wbyfn"]
[ext_resource type="Texture2D" uid="uid://bwl5l2moh0odr" path="res://assets/Chroma-Noir-User-Interface-v1.0/Chroma-Noir-User-Interface-8x8/Frames-and-Banners.png" id="2_w5vpb"]
[ext_resource type="Texture2D" uid="uid://bhkwcqtwu0ckg" path="res://assets/Chroma-Noir-User-Interface-v1.0/Chroma-Noir-User-Interface-8x8/Inputs.png" id="3_umaxm"]

[node name="MessageDisplayer" type="Node2D"]
z_index = 1
script = ExtResource("1_wbyfn")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 8.0
offset_top = 30.0
offset_right = 152.0
offset_bottom = 88.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_w5vpb")
region_rect = Rect2(224, 72, 32, 32)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
autowrap_mode = 3

[node name="ButtonUpSpr" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(140, 44)
rotation = 1.5708
texture = ExtResource("3_umaxm")
region_enabled = true
region_rect = Rect2(0, 120, 16, 16)

[node name="ButtonDownSpr" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(140, 84)
rotation = 1.5708
texture = ExtResource("3_umaxm")
region_enabled = true
region_rect = Rect2(0, 104, 16, 16)

[node name="NextGraphic" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.364706, 0.890196, 0.290196, 1)
offset_left = 140.0
offset_top = 76.0
offset_right = 148.0
offset_bottom = 84.0
texture = ExtResource("3_umaxm")
region_rect = Rect2(0, 80, 17, 9)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 3
